<package>
  <name>gazebo_perception_process_module</name>
  <version>1.0.0</version>
  
  <description>
    pr2_manipulation_process_module
  </description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <url>http://ros.org/wiki/pr2_manipulation_process_module</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cram_roslisp_common</build_depend>
  <build_depend>cram_process_modules</build_depend>
  <build_depend>cram_reasoning</build_depend>
  <build_depend>cram_plan_knowledge</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>designators_ros</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_manipulation_knowledge</build_depend>
  <build_depend>cram_plan_failures</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>cram_projection</build_depend>
  <build_depend>cram_physics_utils</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>bullet_reasoning</build_depend>

  <run_depend>cram_roslisp_common</run_depend>
  <run_depend>cram_process_modules</run_depend>
  <run_depend>cram_reasoning</run_depend>
  <run_depend>cram_plan_knowledge</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>designators_ros</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_manipulation_knowledge</run_depend>
  <run_depend>cram_plan_failures</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>cram_projection</run_depend>
  <run_depend>cram_physics_utils</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>bullet_reasoning</run_depend>

</package>
