<package format="2">
  <name>gazebo_perception_process_module</name>
  <version>1.0.0</version>
  
  <description>
    pr2_manipulation_process_module
  </description>
  
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <url>http://ros.org/wiki/pr2_manipulation_process_module</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslisp_utilities</depend>
  <depend>cram_language</depend>
  <depend>cram_prolog</depend>
  <depend>cram_process_modules</depend>
  <depend>cram_utilities</depend>
  <depend>cram_designators</depend>
  <depend>cram_plan_occasions_events</depend>
  <depend>cram_projection</depend>
  <depend>cram_physics_utils</depend>
  <depend>cl_urdf</depend>
  <depend>cram_gazebo_utilities</depend>
  <depend>gazebo_visibility_ros</depend>

</package>
