<package>
  <name>gazebo_visibility_ros</name>
  <version>0.1.0</version>

  <description>
    A little service to (approximately) test whether an object is visible in a Gazebo
    world from a given camera pose
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/mpomarlan/meshproc/issues</url>
  <url type="repository">https://github.com/mpomarlan/meshproc</url>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>


